# ReciclAR-Vision

./: .gitignore  README.md  pyproject.toml
api/: main.py
app/: main.py
docs/: datos.md  plan.md
scripts/: create_split.py  train.py
src/data/: dataset.py  split.py  transforms.py
src/models/: explainability.py  inference.py  model_factory.py  training.py
tests/: test_api.py  test_data_pipeline.py
